core: appointment request
